# PYDNS-Scanner

./: .gitignore  LICENSE  README-FA.md  README-ZH.md  README.md  RELEASE_NOTES.md  hook-rich.py  pydns-scanner.spec  pyproject.toml  requirements-full.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: build-executables.yml  publish.yml
python/: __init__.py  __main__.py  dnsscanner_tui.py
python/scanner/: __init__.py  config_mixin.py  constants.py  extra_tests.py  ip_streaming.py  isp_cache.py  proxy_testing.py  results.py  slipnet.py  slipstream.py  utils.py  widgets.py  worker_pool.py
python/slipnet-client/linux/: slipnet-linux-amd64  slipnet-linux-arm64
python/slipstream-client/android/: slipstream-client-linux-arm64
python/slipstream-client/linux/: slipstream-client-linux-amd64
python/slipstream-client/mac/: slipstream-client-darwin-amd64  slipstream-client-darwin-arm64
slipstream-client/mac/: slipstream-client-darwin-arm64
